# geometric-fv

./: .gitignore
code/: .gitignore  .pre-commit-config.yaml  Makefile  TODO.md  environment.yaml  pyproject.toml
code/.gemini/: GEMINI.md
code/docs/: conf.py  index.md
code/scripts/: acoustics.py  burgers.py  convergence.py  implicit_upwind.py  solve.py
code/src/geometric_fv/: boundary.py  config.py  enums.py  equations.py  experiments.py  grid.py  mesh.py  problems.py  reconst.py  schemes.py  slope.py  solver.py  utils.py
code/test/: test_boundary.py  test_equations.py  test_grid.py  test_mesh.py  test_problems.py  test_schemes.py  test_slope.py  test_solver.py
paper/: .gitignore  abstract.tex  main.tex  preamble.tex
paper/bib/: references.bib
paper/chapters/: explicit.tex  implicit.tex  intro.tex  nonlinear.tex
paper/fig/: average-god.tex  backtrace-front.tex  backtrace.tex  box-flux.tex  box-reconstruct.tex  evolve-god.tex  evolve-linear.tex  flux-god.tex  godunov-average.tex  godunov-evolve.tex  godunov-flux.tex  godunov-reconstruct.tex  godunov_reconstruct.tex  implicit-ampl-analysis.tex  implicit-phase-analysis.tex  implicit-upwind-flux.tex  implicit-upwind-reconstruct.tex  linear-flux.tex  linear-slopes.tex  linear_flux.tex  linear_slopes.tex  reconstruct-god.tex  reconstruct-linear.tex  tikz-shapes.tex  tikz_shapes.tex
